--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="oem-852">
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <meta property="og:title" content="Yerenzter">
     <meta property="og:url" content="https://yerenzter.github.io/yr">
+    <meta property="og:description" content="About page driven by FQJS by Yerenzter">
+    <meta name="description" content="About page is driven by FQJS by Yerenzter.">
+    <meta name="theme-color" content="#617ED1">
     <link href="lib/fq/fq.css" rel="stylesheet">
     <script src="lib/fq/fq.js" type="text/javascript"></script>
     <title>Yerenzter</title>
