--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="oem-852">
+<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <meta property="og:title" content="Yerenzter">
     <meta property="og:url" content="https://yerenzter.github.io/yr">
     <meta property="og:description" content="About page driven by FQJS by Yerenzter">
     <meta name="description" content="About page is driven by FQJS by Yerenzter.">
     <meta name="theme-color" content="#617ED1">
-    <link href="lib/fq/fq.css" rel="stylesheet">
-    <script src="lib/fq/fq.js" type="text/javascript"></script>
     <title>Yerenzter</title>
-  </head>
-  <body>
-    <div id="root"></div>
+</head>
+<body>
+    <div id="fq-root"></div>
+    <script src="lib/fq/fq.js" type="text/javascript"></script>
     <script src="main/app.js" type="text/javascript"></script>
-  </body>
+</body>
 </html>
